# amdgpu-sim

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.agents/skills/commit-changes/: SKILL.md
.agents/skills/commit-changes/agents/: openai.yaml
.agents/skills/profile-rdna-jit/: SKILL.md
.agents/skills/profile-rdna-jit/agents/: openai.yaml
.agents/skills/profile-rdna-jit/references/: helper-template.md  temporary-instrumentation.md
.agents/skills/profile-rdna-jit/scripts/: analyze_jit_perf.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/skills/run-smallpt/: SKILL.md
examples/bitonic_sort/: main.rs
examples/histogram/: main.rs
examples/raytracing/: main.rs
examples/simple_hgemm/: main.rs
examples/smallpt/: main.rs
examples/texture/: main.rs
examples/warp_shuffle/: main.rs
src/: bit.rs  buffer.rs  decoders.rs  gcn3_decoder.rs  gcn_instructions.rs  gcn_processor.rs  instructions.rs  lib.rs  main.rs  processor.rs  rdna4_decoder.rs  rdna_instructions.rs  rdna_processor.rs  rdna_translator.rs  utils.rs
src/c/: rdna_processor.cpp
src/rdna_translator/: bvh.rs  combine.rs  mod.rs  register_usage.rs
src/rdna_translator/emitter/: math.rs  mem.rs  mod.rs  operands.rs  regs.rs  salu.rs  valu.rs  vop3.rs
