[package]
name = "amdgpu_sim"
version = "0.1.0"
authors = ["yoshou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
indicatif = "0.15.0"
libm = "*"
num-traits = "0.2.12"
llvm-sys = "150.2.0"
libc = "0.2"

[dev-dependencies]
rand = "*"
object = "0.7.0"
yaml-rust = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
rmp-serde = "1.1.2"
png = "*"
getopts = "0.2"

[features]
default = ["llvm-sys/prefer-dynamic"]

