[package]
name = "amdgpu_sim"
version = "0.1.0"
authors = ["yoshou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
indicatif = "0.15.0"
libm = "*"
num-traits = "0.2"
num-derive = "0.4"
llvm-sys = "201.0.1"
libc = "0.2"
aligned-vec = "0.6.4"
itertools = "0.14.0"
threadpool = "1.8.1"
half = "2.6.0"

[dev-dependencies]
rand = "*"
object = "0.7.0"
yaml-rust = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
rmp-serde = "1.1.2"
png = "*"
getopts = "0.2"

[features]
default = ["llvm-sys/prefer-dynamic"]

[profile.release]
debug = "line-tables-only"

[build]
rustflags = ["-C", "force-frame-pointers=yes"]